--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,9 @@
   </head>
 
   <body><%= render "shared/navbar" %>
-<%= render "shared/flashes" %>
-
-    <%= yield %>
+    <%= render "shared/flashes" %>
+    <div class="container my-5">
+        <%= yield %>
+    </div>
   </body>
 </html>
