--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,5 +1,9 @@
 <h1>All restaurants</h1>
-<p><%= link_to "Add +", new_restaurant_path, style:"text-decoration: none;" %></p>
+
+<% if policy(Restaurant).new? %>
+  <p><%= link_to "Add +", new_restaurant_path, style:"text-decoration: none;" %></p>
+<% end %>
+
 <ol>
   <% @restaurants.each do |restaurant| %>
     <li><%= link_to restaurant.name, restaurant_path(restaurant), style: "text-decoration: none;" %></li>
